# ghost-gpt

./: .gitignore  README.md  embed.py  main.py  parse_into_thirds.py  pyproject.toml  supabase_utils.py
static/css/: main.css
templates/: base.html
